# json-to-sql

./: .gitignore  CHANGELOG.md  LICENSE  README.md  json-to-sql.cabal  package.yaml  setup.ps1  setup.sh  stack.yaml  user.json
.github/workflows/: build.yml  test.yml
app/: Main.hs
src/: Json.hs  JsonParser.hs  Lib.hs  SqlConverter.hs  Utils.hs
test/: JsonParserTest.hs  JsonTest.hs  Spec.hs  SqlConvertorTest.hs  UtilTest.hs
