cabal-version: 2.2
name:           json-to-sql
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/json-to-sql#readme>
homepage:       https://github.com/@2002Bishwajeet/json-to-sql#readme
bug-reports:    https://github.com/@2002Bishwajeet/json-to-sql/issues
author:         Bishwajeet Parhi
maintainer:     bishwajeet.techmaster@gmail.com
copyright:      2025 Bishwajeet Parhi
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/@2002Bishwajeet/json-to-sql

library
  exposed-modules:
      Json
      JsonParser
      Lib
      SqlConverter
      Utils
  other-modules:
      Paths_json_to_sql
  autogen-modules:
      Paths_json_to_sql
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      HUnit
    , base >=4.7 && <5
    , directory
    , filepath
  default-language: Haskell2010

executable json-to-sql-exe
  main-is: Main.hs
  other-modules:
      Paths_json_to_sql
  autogen-modules:
      Paths_json_to_sql
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HUnit
    , base >=4.7 && <5
    , directory
    , filepath
    , json-to-sql
  default-language: Haskell2010

test-suite json-to-sql-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      JsonParserTest
      SqlConvertorTest
      UtilTest
      Paths_json_to_sql
  autogen-modules:
      Paths_json_to_sql
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HUnit
    , base >=4.7 && <5
    , directory
    , filepath
    , json-to-sql
  default-language: Haskell2010
